# mela-atom-ide

./: .gitignore  README.md  package.json
grammars/: tree-sitter-mela.cson
keymaps/: language-mela.json
lib/: language-mela-view.js  language-mela.js
mela-compiler/: CMakeLists.txt
mela-compiler/CMSIS_Sim/: arm_bitreversal.c  arm_cfft_q31.c  arm_math.h
mela-compiler/MeLaLib/: Array.c  Array.h  Buffer.c  Buffer.h  CDF24.c  CDF24.h  CircularBuffer.c  CircularBuffer.h  Complex.h  Distribution.c  Distribution.h  FFT.c  FFT.h  Filter.c  Filter.h  MelaMath.c  MelaMath.h  MelaUtils.c  MelaUtils.h  Record.c  Record.h  Serial.c  Serial.h  StaLta.c  StaLta.h  Trigger.c  Trigger.h
menus/: language-mela.json
spec/: language-mela-spec.js  language-mela-view-spec.js
styles/: language-mela.less
